--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,15 @@ header {
 }
 
 
-
+.card-number {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  color: #FFFFFF;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);  
+}
 
 
 .container-card {
