--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ header {
 .card-number {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 400;
-  color: #FFFFFF;
+  color: #050011;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -95,11 +95,13 @@ header {
     height: 100%;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    /*box-shadow:inset 0px 0px 5px 0px rgb(0, 0, 0);*/
   }
   
   /* Style the front side (fallback if image is missing) */
   .flip-card-front {
-    background-color: #bbb;
+    background-color: #fff;
     color: black;
   }
   
