--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,20 @@ body {
   grid-template-rows: auto 100vh auto;
 }
 
+.slider {
+  color: #ffffff;
+}
+.label {
+  color: #ffffff;
+}
+
+.aside-item {
+  background-color: #1E1E2D;
+  box-shadow: 5px 6px 15px -5px #1E1E2D;
+  padding: 3px;
+  margin: 3px;
+}
+
 .title {
   color: teal;
   font-family: ink Free;
